// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`profiles agent-skill contains no test scripts and all kinds keep a complete blueprint: library 1`] = `
{
  "files": [
    ".editorconfig",
    ".gitignore",
    ".nvmrc",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "DEVELOPMENT.md",
    "README.md",
    "biome.json",
    "cliff.toml",
    "lefthook.yml",
    "tsconfig.json",
    "tsdown.config.ts",
  ],
  "packageJson": {
    "devDependencies": {
      "@biomejs/biome": "^1.9.4",
      "@size-limit/file": "^5.0.0",
      "git-cliff": "^2.13",
      "lefthook": "^1.11.0",
      "size-limit": "^11.2.0",
      "tsdown": "^0.15.0",
      "typescript": "^5.4.0",
    },
    "engines": {
      "node": "24.x",
    },
    "exports": {
      ".": {
        "default": "./dist/index.js",
        "types": "./dist/index.d.ts",
      },
    },
    "main": "./dist/index.js",
    "name": "sample",
    "scripts": {
      "build": "tsdown",
      "changelog": "git cliff --config cliff.toml --unreleased",
      "check": "lefthook run pre-push --force",
      "clean": "rm -rf dist",
      "format": "biome format --write",
      "format:check": "biome format",
      "lint": "lefthook run esa-lint",
      "lint:check": "biome lint",
      "lint:fix": "biome lint --write",
      "prepare": "lefthook install",
      "size": "npm run build && size-limit",
      "test": "bun test --pass-with-no-tests",
      "test:coverage": "bun test --coverage --pass-with-no-tests",
      "test:watch": "bun test --watch --pass-with-no-tests",
      "typecheck": "tsc --noEmit",
    },
    "size-limit": [
      {
        "limit": "10 kB",
        "name": "Library bundle",
        "path": "dist/index.js",
      },
    ],
    "type": "module",
    "types": "./dist/index.d.ts",
    "version": "0.1.0",
  },
}
`;

exports[`profiles agent-skill contains no test scripts and all kinds keep a complete blueprint: forge-app 1`] = `
{
  "files": [
    ".editorconfig",
    ".gitignore",
    ".nvmrc",
    "AGENTS.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "DEVELOPMENT.md",
    "README.md",
    "biome.json",
    "cliff.toml",
    "lefthook.yml",
    "scripts/forge-vars-from-secretspec.sh",
    "secretspec.toml",
    "tsconfig.json",
    "tsconfig.typecheck.json",
  ],
  "packageJson": {
    "dependencies": {
      "@forge-ahead/atlassian-api-types": "github:ibuchanan/forge-ahead-atlassian-api-types",
      "@forge-ahead/errors": "github:ibuchanan/forge-ahead-errors",
      "@forge-ahead/logging": "github:ibuchanan/forge-ahead-logging",
    },
    "devDependencies": {
      "@ast-grep/cli": "^0.44",
      "@biomejs/biome": "^1.9.4",
      "@size-limit/file": "^5.0.0",
      "git-cliff": "^2.13",
      "lefthook": "^1.11.0",
      "size-limit": "^11.2.0",
      "tool-forge-prelint-ast-grep": "github:ibuchanan/tool-forge-prelint-ast-grep",
      "typescript": "^5.9.3",
    },
    "engines": {
      "node": "24.x",
    },
    "name": "sample",
    "scripts": {
      "build": "tsc -p tsconfig.json",
      "changelog": "git cliff --config cliff.toml --unreleased",
      "check": "lefthook run pre-push --force",
      "clean": "rm -rf dist",
      "forge:deploy": "secretspec run -- sh -c 'forge deploy --environment "$FORGE_ENVIRONMENT"'",
      "forge:install": "secretspec run -- sh -c 'forge install --site "$FORGE_SITE" --product "$FORGE_PRODUCT" --environment "$FORGE_ENVIRONMENT"'",
      "forge:register": "secretspec run -- forge register",
      "forge:uninstall": "secretspec run -- sh -c 'forge uninstall --site "$FORGE_SITE" --product "$FORGE_PRODUCT" --environment "$FORGE_ENVIRONMENT"'",
      "forge:upgrade": "secretspec run -- sh -c 'forge install --upgrade --site "$FORGE_SITE" --product "$FORGE_PRODUCT" --environment "$FORGE_ENVIRONMENT"'",
      "forge:variables:set": "secretspec run -- sh -c 'forge variables set --environment "$FORGE_ENVIRONMENT" "$@"' --",
      "forge:variables:set-encrypted": "secretspec run -- sh -c 'forge variables set --environment "$FORGE_ENVIRONMENT" --encrypt "$@"' --",
      "forge:variables:set:secretspec": "secretspec run -- bash scripts/forge-vars-from-secretspec.sh",
      "format": "biome format --write",
      "format:check": "biome format",
      "lint": "lefthook run esa-lint",
      "lint:check": "biome lint",
      "lint:fix": "biome lint --write",
      "lint:forge": "forge lint",
      "lint:prelint": "ast-grep scan --config node_modules/tool-forge-prelint-ast-grep/sgconfig.ecosol.yml --globs '!node_modules/**'",
      "prepare": "lefthook install",
      "size": "npm run build && size-limit",
      "test": "bun test --pass-with-no-tests",
      "test:coverage": "bun test --coverage --pass-with-no-tests",
      "test:watch": "bun test --watch --pass-with-no-tests",
      "typecheck": "tsc -p tsconfig.typecheck.json --noEmit",
    },
    "size-limit": [
      {
        "limit": "10 kB",
        "name": "Forge app bundle",
        "path": "dist/**/*.js",
      },
    ],
    "type": "module",
    "version": "0.1.0",
  },
}
`;

exports[`profiles agent-skill contains no test scripts and all kinds keep a complete blueprint: tool 1`] = `
{
  "files": [
    ".editorconfig",
    ".gitignore",
    ".nvmrc",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "DEVELOPMENT.md",
    "README.md",
    "biome.json",
    "cliff.toml",
    "lefthook.yml",
    "tsconfig.json",
  ],
  "packageJson": {
    "devDependencies": {
      "@biomejs/biome": "^1.9.4",
      "git-cliff": "^2.13",
      "lefthook": "^1.11.0",
      "typescript": "^5.4.0",
    },
    "engines": {
      "node": "24.x",
    },
    "name": "sample",
    "scripts": {
      "build": "tsc",
      "changelog": "git cliff --config cliff.toml --unreleased",
      "check": "lefthook run pre-push --force",
      "clean": "rm -rf dist",
      "format": "biome format --write",
      "format:check": "biome format",
      "lint": "lefthook run esa-lint",
      "lint:check": "biome lint",
      "lint:fix": "biome lint --write",
      "prepare": "lefthook install",
      "test": "bun test --pass-with-no-tests",
      "test:coverage": "bun test --coverage --pass-with-no-tests",
      "test:watch": "bun test --watch --pass-with-no-tests",
      "typecheck": "tsc --noEmit",
    },
    "type": "module",
    "version": "0.1.0",
  },
}
`;

exports[`profiles agent-skill contains no test scripts and all kinds keep a complete blueprint: agent-skill 1`] = `
{
  "files": [
    ".editorconfig",
    ".gitignore",
    ".nvmrc",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "DEVELOPMENT.md",
    "README.md",
    "biome.json",
    "lefthook.yml",
    "tsconfig.json",
  ],
  "packageJson": {
    "devDependencies": {
      "@biomejs/biome": "^1.9.4",
      "lefthook": "^1.11.0",
      "typescript": "^5.4.0",
    },
    "engines": {
      "node": "24.x",
    },
    "name": "sample",
    "scripts": {
      "build": "tsc",
      "check": "lefthook run pre-push --force",
      "clean": "rm -rf dist",
      "format": "biome format --write",
      "format:check": "biome format",
      "lint": "lefthook run esa-lint",
      "lint:check": "biome lint",
      "lint:fix": "biome lint --write",
      "prepare": "lefthook install",
      "typecheck": "tsc --noEmit",
    },
    "type": "module",
    "version": "0.1.0",
  },
}
`;
